[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/testing/parts.gd" type="Script" id=1]
[ext_resource path="res://scenes/stage/robot.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/stage/tiles/floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/stage/tiles/table.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/stage/containers/container.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/stage/items/tomato.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/stage/items/chopped_tomato.tscn" type="PackedScene" id=7]

[node name="PartsTest" type="Spatial"]
script = ExtResource( 1 )

[node name="Robot" parent="." instance=ExtResource( 2 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.878035, -0.162921, 0.450011, -0.212426, 0.709913, 0.67149, -0.428869, -0.685186, 0.58872, 0, 5, 0 )
shadow_enabled = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.810326, -0.272084, 0.518982, 0.0212974, 0.898755, 0.437933, -0.585593, -0.343815, 0.734079, 2.56758, 3.62839, 4.90195 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -650.0
margin_bottom = -441.0
mouse_filter = 1

[node name="Label" type="Label" parent="HUD"]
margin_left = 4.91769
margin_top = 5.53241
margin_right = 44.9177
margin_bottom = 19.5324
text = "player"

[node name="Player0" type="Button" parent="HUD"]
margin_left = 52.5578
margin_top = 3.38091
margin_right = 72.5578
margin_bottom = 23.3809
text = "0"

[node name="Player1" type="Button" parent="HUD"]
margin_left = 80.5272
margin_top = 2.76619
margin_right = 100.527
margin_bottom = 22.7662
text = "1"

[node name="Player2" type="Button" parent="HUD"]
margin_left = 107.575
margin_top = 2.76619
margin_right = 127.575
margin_bottom = 22.7662
text = "2"

[node name="Player3" type="Button" parent="HUD"]
margin_left = 134.622
margin_top = 3.38091
margin_right = 154.622
margin_bottom = 23.3809
text = "3"

[node name="Label2" type="Label" parent="HUD"]
margin_left = 4.61034
margin_top = 35.6533
margin_right = 44.6103
margin_bottom = 49.6533
text = "robot"

[node name="Robot0" type="Button" parent="HUD"]
margin_left = 53.1726
margin_top = 32.2723
margin_right = 73.1726
margin_bottom = 52.2723
text = "0"

[node name="Robot1" type="Button" parent="HUD"]
margin_left = 81.0
margin_top = 32.0
margin_right = 101.0
margin_bottom = 52.0
text = "1"

[node name="Robot2" type="Button" parent="HUD"]
margin_left = 108.804
margin_top = 31.6576
margin_right = 128.804
margin_bottom = 51.6576
text = "2"

[node name="Robot3" type="Button" parent="HUD"]
margin_left = 136.466
margin_top = 31.6576
margin_right = 156.466
margin_bottom = 51.6576
text = "3"

[node name="Robot4" type="Button" parent="HUD"]
margin_left = 163.821
margin_top = 32.2723
margin_right = 183.821
margin_bottom = 52.2723
text = "4"

[node name="Robot5" type="Button" parent="HUD"]
margin_left = 192.405
margin_top = 32.2723
margin_right = 212.405
margin_bottom = 52.2723
text = "5"

[node name="Robot6" type="Button" parent="HUD"]
margin_left = 219.759
margin_top = 31.965
margin_right = 239.759
margin_bottom = 51.965
text = "6"

[node name="Robot7" type="Button" parent="HUD"]
margin_left = 248.036
margin_top = 32.2724
margin_right = 268.036
margin_bottom = 52.2724
text = "7"

[node name="ButtonWalk" type="Button" parent="HUD"]
margin_left = 9.77405
margin_top = 61.9023
margin_right = 63.774
margin_bottom = 86.9023
text = "walk"

[node name="ButtonRotateLeft" type="Button" parent="HUD"]
margin_left = 76.1159
margin_top = 61.2039
margin_right = 130.116
margin_bottom = 86.2039
text = "rotate left"

[node name="ButtonRotateRight" type="Button" parent="HUD"]
margin_left = 164.804
margin_top = 61.2039
margin_right = 218.804
margin_bottom = 86.2039
text = "rotate right"

[node name="ButtonPickUp" type="Button" parent="HUD"]
margin_left = 259.0
margin_top = 61.0
margin_right = 325.0
margin_bottom = 86.0
text = "pick up"

[node name="ButtonPutDown" type="Button" parent="HUD"]
margin_left = 334.476
margin_top = 61.2039
margin_right = 417.476
margin_bottom = 86.2039
text = "put down"

[node name="ButtonChop" type="Button" parent="HUD"]
margin_left = 426.877
margin_top = 61.2039
margin_right = 509.877
margin_bottom = 86.2039
text = "chop"

[node name="ButtonCounter" type="Button" parent="HUD"]
margin_left = 518.737
margin_top = 61.2039
margin_right = 601.737
margin_bottom = 86.2039
text = "counter"

[node name="ButtonMessage" type="Button" parent="HUD"]
margin_left = 10.4877
margin_top = 95.413
margin_right = 93.4877
margin_bottom = 120.413
text = "message"

[node name="Floor" parent="." instance=ExtResource( 3 )]

[node name="Floor2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )

[node name="Table" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )

[node name="Container" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.669084, 2 )

[node name="Tomato" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.817565, 2 )

[node name="ChoppedTomato" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.818, 2 )

[connection signal="pressed" from="HUD/Player0" to="." method="set_player" binds= [ 0 ]]
[connection signal="pressed" from="HUD/Player1" to="." method="set_player" binds= [ 1 ]]
[connection signal="pressed" from="HUD/Player2" to="." method="set_player" binds= [ 2 ]]
[connection signal="pressed" from="HUD/Player3" to="." method="set_player" binds= [ 3 ]]
[connection signal="pressed" from="HUD/Robot0" to="." method="set_robot" binds= [ 0 ]]
[connection signal="pressed" from="HUD/Robot1" to="." method="set_robot" binds= [ 1 ]]
[connection signal="pressed" from="HUD/Robot2" to="." method="set_robot" binds= [ 2 ]]
[connection signal="pressed" from="HUD/Robot3" to="." method="set_robot" binds= [ 3 ]]
[connection signal="pressed" from="HUD/Robot4" to="." method="set_robot" binds= [ 4 ]]
[connection signal="pressed" from="HUD/Robot5" to="." method="set_robot" binds= [ 5 ]]
[connection signal="pressed" from="HUD/Robot6" to="." method="set_robot" binds= [ 6 ]]
[connection signal="pressed" from="HUD/Robot7" to="." method="set_robot" binds= [ 7 ]]
[connection signal="pressed" from="HUD/ButtonWalk" to="." method="_on_ButtonWalk_pressed"]
[connection signal="pressed" from="HUD/ButtonRotateLeft" to="." method="_on_ButtonRotateLeft_pressed"]
[connection signal="pressed" from="HUD/ButtonRotateRight" to="." method="_on_ButtonRotateRight_pressed"]
[connection signal="pressed" from="HUD/ButtonPickUp" to="." method="_on_ButtonPickUp_pressed"]
[connection signal="pressed" from="HUD/ButtonPutDown" to="." method="_on_ButtonPutDown_pressed"]
[connection signal="pressed" from="HUD/ButtonChop" to="." method="_on_ButtonChop_pressed"]
[connection signal="pressed" from="HUD/ButtonCounter" to="." method="_on_ButtonCounter_pressed"]
[connection signal="pressed" from="HUD/ButtonMessage" to="." method="_on_ButtonMessage_pressed"]
